fix: align inline file icon and make it part of clickable area (#108)

--- a/src/ui/chat/components/InlineFiles.scss
+++ b/src/ui/chat/components/InlineFiles.scss
@@ -135,6 +135,7 @@
     .material-icons {
       padding: 0;
       margin: 0;
+      vertical-align: middle;
     }
 
     button {
